envoy.yaml
admin:
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                scheme_header_transformation:
                  scheme_to_overwrite: https
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: httpbin
                http_filters:
                  - name: wasmdemo
                    typed_config:
                      "@type": type.googleapis.com/udpa.type.v1.TypedStruct
                      type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                      value:
                        config:
                          name: wasmdemo
                          vm_config:
                            runtime: envoy.wasm.runtime.v8
                            code:
                              local:
                                filename: ./main.wasm
                          configuration:
                            "@type": "type.googleapis.com/google.protobuf.StringValue"
                            value: |
                              {
                                "grayKey": "userId",
                                "backendGrayTag": "env",
                                "uniqueGrayTag": "uuid",
                                "rules": [
                                  {
                                    "name": "inner-user"
                                  },
                                  {
                                    "name": "beta-user",
                                    "grayTagKey": "level",
                                    "grayTagValue": [
                                      "level3",
                                      "level5"
                                    ]
                                  },
                                  {
                                    "name": "inner-user1",
                                    "grayKeyValue": [
                                      "noah",
                                      "00000003"
                                    ],
                                    "grayTagKey": "level",
                                    "grayTagValue": [
                                      "level3",
                                      "level5"
                                    ]
                                  }
                                ],
                                "rewrite": {
                                  "host": "static.chagee.com",
                                  "indexRouting": {
                                    "/": "/mfe/chagee-iot-operation/{version}/index.html"
                                  },
                                  "fileRouting": {
                                    "/": "/mfe/{version}",
                                    "/mfe": "/mfe/{version}"
                                  }
                                },
                                "skippedPaths": [
                                  "/api/**",
                                  "/v2/**"
                                ],
                                "indexPaths": [
                                  "/mfe/**/mf-manifest-main.json"
                                ],
                                "baseDeployment": {
                                  "version": "test"
                                },
                                "grayDeployments": [
                                  {
                                    "weight": 30,
                                    "name": "inner-user",
                                    "version": "uat",
                                    "enabled": true,
                                    "backendVersion":"gray1"
                                  },
                                  {
                                    "weight": 30,
                                    "name": "beta-user",
                                    "version": "prod",
                                    "enabled": true,
                                    "backendVersion":"gray2"
                                  },
                                  {
                                    "name": "inner-user1",
                                    "version": "uat",
                                    "enabled": true,
                                    "backendVersion":"gray3"
                                  }
                                ],
                                "injection": {
                                  "globalConfig": {
                                    "key": "HIGRESS_CONSOLE_CONFIG",
                                    "featureKey": "FEATURE_STATUS",
                                    "value": "{CONSOLE_GLOBAL: {'gray':'2.0.15','main':'2.0.15'}}",
                                    "enabled": true
                                  },
                                  "head": [
                                    "<script>console.log('Header')</script>"
                                  ],
                                  "body": {
                                    "first": [
                                      "<script>console.log('hello world before')</script>",
                                      "<script>console.log('hello world before1')</script>"
                                    ],
                                    "last": [
                                      "<script>console.log('hello world after')</script>",
                                      "<script>console.log('hello world after2')</script>"
                                    ]
                                  }
                                }
                              }
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: httpbin
      connect_timeout: 30s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: httpbin
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: static.chagee.com
                      port_value: 80
